boilerplate and setup completed to start react

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,9 @@
-<%- include ("./layout/header") %>
-<h1>hej</h1>
+<%- include ("./layout/header") -%>
+<%- include ("./layout/footer") -%>
+<main class="flex flex-col justify-center items-center h-full mt-16">
+  <div class="wordle-box h-96 w-96 bg-slate-300 items-center" id="root">hej</div>
+  
+  
+</main>
+</body>
+</html>
