highscore list now renders to site

--- a/Backend/views/layout/header.ejs
+++ b/Backend/views/layout/header.ejs
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="../static/css/output.css" />
     <title>Wordle game</title>
   </head>
-  <body class="bg-gradient-to-b from-gray-900 to-gray-600 bg-gradient-to-t w-screen min-h-screen">
+  <body
+    class="bg-gradient-to-b from-gray-900 to-gray-600 bg-gradient-to-t flex flex-col w-screen min-h-screen">
     <header class="header w-full bg-slate-500 bg-opacity-30 h-20">
       <nav class="h-20 justify-evenly flex flex-row items-center">
         <% menu.forEach(function(a) { %>
