--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -1,9 +1,11 @@
 <%- include ("./layout/header") -%>
-<%- include ("./layout/footer") -%>
+
 <main class="flex flex-col justify-center items-center h-full mt-16">
+  <h1>Highscores</h1>
   <div class="wordle-box h-96 w-96 bg-slate-300 items-center" id="root">hej</div>
   
   
 </main>
+<%- include ("./layout/footer") -%>
 </body>
 </html>
