--- a/Backend/views/layout/footer.ejs
+++ b/Backend/views/layout/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed inset-x-0 bottom-0 w-full bg-slate-700 bg-opacity-30 h-28">
+<footer class="mt-auto w-full bg-slate-700 bg-opacity-30 h-28">
   <nav class="h-28 justify-evenly flex flex-col items-center">
     <% menu.forEach(function(a) { %>
     <li class="list-none">
