Put together SSR and react game

--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -1,11 +1,10 @@
 <%- include ("./layout/header") -%>
 
-<main class="flex flex-col justify-center items-center h-full mt-16">
-  <h1>Highscores</h1>
-  <div class="wordle-box h-96 w-96 bg-slate-300 items-center" id="root">hej</div>
-  
+  <div id="root">
+  </div>
   
 </main>
 <%- include ("./layout/footer") -%>
+<script type="module" src="../static/JS/game.js" defer></script>
 </body>
 </html>
