reset back from heroku try

--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -5,6 +5,6 @@
   
 </main>
 <%- include ("./layout/footer") -%>
-<script type="module" src="../static/JS/game.js" defer></script>
+<script type="module" src="../public/JS/game.js" defer></script>
 </body>
 </html>
