--- a/Backend/views/layout/header.ejs
+++ b/Backend/views/layout/header.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
+    <!-- <base href="/" /> -->
 
-    <link rel="stylesheet" href="../static/css/output.css" />
+    <link rel="stylesheet" href="../../public/css/output.css" />
 
     <title>Wordle game</title>
   </head>
