added keys to keyboard

--- a/Backend/views/about.ejs
+++ b/Backend/views/about.ejs
@@ -2,10 +2,10 @@
 
 
 <main class="flex flex-col justify-center items-center  mt-5">
-  <h1 class="text-4xl font-bold mb-5">Vem är jag?</h1>
-  <div class="wordle-box h-fit max-w-full mb-10 bg-white opacity-50 items-center rounded"><ul class=" highscore-list">
-
-  </ul></div>
+  <h1 class="text-4xl font-bold mb-5">About me and this project</h1>
+  <div class="w-3/4 flex items-center content-between ">
+  <img src="../public/images/male-avatar.svg" alt="male avatar" class="w-32">
+ <h2 class="text-3xl m-10 text-white">Fullstack Developer</h2></div>
   
   
 </main>
