--- a/Backend/views/about.ejs
+++ b/Backend/views/about.ejs
@@ -2,10 +2,54 @@
 
 
 <main class="flex flex-col justify-center items-center  mt-5">
-  <h1 class="text-4xl font-bold mb-5">About me and this project</h1>
-  <div class="w-3/4 flex items-center content-between ">
-  <img src="../public/images/male-avatar.svg" alt="male avatar" class="w-32">
- <h2 class="text-3xl m-10 text-white">Fullstack Developer</h2></div>
+  <h1 class="text-4xl font-bold mb-5 text-center">About me and this project</h1>
+  <div class="flex flex-col sm:flex-row justify-center content-between ">
+ <div class="flex flex-col mx-10">
+  <img src="../public/images/male-avatar.svg" alt="male avatar" class="w-24 self-center">
+  <p class="text-center text-white">Markus Korhonen</p></div>
+ <h2 class="text-2xl m-10 w-auto sm:w-3/6 text-white">This project was made by me 2023 while i was studying to become a fullstack developer in Javascript & Java and was part of course JavaScript Fullstack</h2></div>
+ <h3 class="m-5 text-white text-2xl">Tools used in this project</h3>
+<ul class="flex justify-center mb-24 text-white ">
+  <div class="mx-5">
+  <div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+    <img src="../public/images/nodejs-logo.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>NodeJS</li>
+</div>
+<div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/JavaScript-logo.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>Javascript</li>
+</div>
+<div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/Tailwind_CSS_Logo.svg.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>Tailwind</li>
+</div>
+
+
+<div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/Vitejs-logo.svg.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>Vite</li>
+</div>
+</div>
+<div class="mx-5">
+  <div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/react-logo.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>React</li>
+</div>
+<div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/mongodb-logo.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>MongoDB</li>
+</div>
+
+<div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/figma-logo.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>Figma</li>
+</div>
+<div class="flex flex-row shadow-sm shadow-slate-600 bg-slate-800 rounded items-center w-36 h-10 my-2">
+  <img src="../public/images/git-logo.png" alt="" class="w-8 ml-2 mr-4 rounded">
+  <li>Git</li>
+</div>
+</div>
+</ul>
   
   
 </main>
