--- a/Backend/views/highscore.ejs
+++ b/Backend/views/highscore.ejs
@@ -1,9 +1,9 @@
 <%- include ("./layout/header") -%>
 
-<script src="/highscorelist.js" defer></script>
+<script src="../public/JS/highscorelist.js" defer></script>
 <main class="flex flex-col justify-center items-center  mt-5">
   <h1 class="text-4xl font-bold mb-5">Highscores</h1>
-  <div class="wordle-box h-fit max-w-full mb-10 bg-white opacity-50 items-center rounded"><ul class=" highscore-list">
+  <div class="wordle-box h-fit w-4/5 sm:w-auto mb-10 bg-white opacity-50 items-center rounded"><ul class=" highscore-list flex justify-center text-center flex-row sm:flex-col flex-wrap sm:flex-nowrap">
 
   </ul></div>
   
