--- a/Backend/views/layout/header.ejs
+++ b/Backend/views/layout/header.ejs
@@ -17,7 +17,7 @@
         <% menu.forEach(function(a) { %>
         <li class="list-none">
           <a
-            class="text-white text-xl <% if (a.active) { %> !text-gray-100 font-bold text-2xl <% } %>"
+            class="text-white text-xl <% if (a.active) { %> !text-gray-100 !font-bold !text-2xl <% } %>"
             href="<%= a.link %>">
             <%= a.label %>
           </a>
